mariadb-IngressRouteTCP.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  namespace: database
  name: mariadb
spec:
  entryPoints:
    - mariadb
  routes:
    - match: HostSNI(`*`)
      services:
        - name: mariadb
          port: 3306
